appId: com.tuvotodecide
name: assertPP
onFlowStart:
  - runFlow: ../../../components/setup/initialSetup.yaml
---
#- runFlow:
#    when:
#        true: ${MAESTRO_WALKTHROUGH != 'true'}
#    file: ../../initialSetup.yaml
- extendedWaitUntil:
    visible:
      id: tabButton_Profile
    timeout: 15000
- tapOn:
    id: tabButton_Profile
- waitForAnimationToEnd:
    timeout: 1000
- scroll
- extendedWaitUntil:
    visible:
      id: profileMenuItem_5
    timeout: 12000
- tapOn:
    id: profileMenuItem_5
- waitForAnimationToEnd:
    timeout: 1000
- extendedWaitUntil:
    visible:
      id: moreMenuItem_12
    timeout: 12000
- tapOn:
    id: moreMenuItem_12
- waitForAnimationToEnd:
    timeout: 1000
- extendedWaitUntil:
    visible: 
        id: privacyPoliciesHeaderTitle
    timeout: 10000  
- waitForAnimationToEnd:
    timeout: 10000    
- assertWithAI:
    assertion: Privacy policy page is visible.
