appId: com.tuvotodecide
name: changePin
onFlowStart:
  - runFlow: ../../../../components/setup/initialSetup.yaml
---
#- runFlow:
#    when:
#        true: ${MAESTRO_WALKTHROUGH != 'true'}
#    file: ../../../initialSetup.yaml
- extendedWaitUntil:
    visible:
      id: tabButton_Profile
    timeout: 15000
- tapOn:
    id: tabButton_Profile
- waitForAnimationToEnd:
    timeout: 1000
- scroll
- extendedWaitUntil:
    visible:
      id: profileMenuItem_5
    timeout: 12000
- tapOn:
    id: profileMenuItem_5
- waitForAnimationToEnd:
    timeout: 1000
- extendedWaitUntil:
    visible:
      id: moreMenuItem_7
    timeout: 12000
- tapOn:
    id: moreMenuItem_7
- waitForAnimationToEnd:
    timeout: 1000
- extendedWaitUntil:
    visible:
      id: securityMenuItemArrow_7
    timeout: 12000
- tapOn:
    id: securityMenuItemArrow_7
- waitForAnimationToEnd:
    timeout: 1000
- extendedWaitUntil:
    visible:
      id: textInput
    timeout: 12000
- doubleTapOn:
    id: textInput
- waitForAnimationToEnd:
    timeout: 500
- inputText: ${MAESTRO_CORRECT_PIN}
- waitForAnimationToEnd:
    timeout: 1000
- runFlow:
    file: ../../../../components/auth/createPin.yaml
    env:
        PIN: ${MAESTRO_SECOND_PIN}
        TEST_TYPE: 'change'
- runFlow:
    when:
        visible: 
            id: logoutButton
    file: ../../../../components/auth/logout.yaml

- runFlow:
    when:
        visible:
            id: MiVotoLogoImage
    file: ../../../../components/auth/login.yaml
    env: 
        PIN: ${MAESTRO_SECOND_PIN}


        
