appId: com.tuvotodecide
---
# Test: Navegación por información adicional "Saber más"
- launchApp:
    clearState: false
- tapOn: "Open debugger to view warnings."
- assertNotVisible: "Open debugger to view warnings."
- tapOn: "Saber más , 󰁔"
- tapOn: Siguiente
- tapOn: Siguiente
- tapOn: Siguiente
- tapOn: Siguiente
- tapOn: Siguiente
