appId: com.tuvotodecide
---
# Test: Buscar usuario por datos personales
- launchApp:
    clearState: false
- tapOn: "Open debugger to view warnings."
- assertNotVisible: "Open debugger to view warnings."
- tapOn: "Tengo una cuenta"
- tapOn: "Olvidé mi cuenta"
- tapOn: "Buscar mi usuario"
- assertVisible: "Buscar cuenta"
- inputText: "Juan"
- tapOn: "Siguiente campo"
- inputText: "Pérez"
- tapOn: "Buscar"
- assertVisible: "Resultados de búsqueda"
